# mlops-project

./: .env.example  .gitignore  Dockerfile.mlflow  Dockerfile.model-api  Dockerfile.prefect-server  Dockerfile.training  Makefile  Makefile.template  README.md  deploy_with_deps.py  docker-compose.yml  env.template  gunicorn_config.py  init.sql  main.py  prefect.yaml  pyproject.toml  pytest.ini  requirements.txt  setup_mlops_project.sh  test_database.py
config/: grafana_datasources.yml
deployment_test/: app.py  dockerfile  gunicorn_config.py  requirements.txt
deployment_test/terraform/: compute.tf  database.tf
deployment_test/terraform/container-vm/: compute.tf  main.tf  variables.tf
deployment_test/terraform/database-vm/: .terraform.lock.hcl  database.tf  main.tf  network.tf
monitoring/: reference_data.parquet
src/mlops_churn/: app.py  churn_pipeline.py  config.py  database.py  drift_detection.py  pipeline.py
terraform/: .terraform.lock.hcl  compute.tf  main.tf  network.tf  outputs.tf
terraform/infrastructure/: main.tf  outputs.tf
terraform/model-api/: data.tf  main.tf
terraform/monitoring/: .terraform.lock.hcl  data.tf  main.tf
terraform/prefect-server/: data.tf  main.tf
terraform/services/: .terraform.lock.hcl  data.tf  main.tf
tests/: test_api.py  test_data_processing.py  test_model_trainer.py  test_pipeline.py  test_prediction_database.py
